# audio-connections

./: .gitignore  .npmrc  CONTRIBUTING.md  PUZZLE_AUTHORS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
.playwright-mcp/: page-2026-05-10T18-15-59-941Z.yml  page-2026-05-10T18-20-13-503Z.yml  page-2026-05-10T18-21-47-524Z.yml  page-2026-05-10T18-24-12-250Z.yml  page-2026-05-10T18-25-27-301Z.yml  page-2026-05-10T18-26-48-334Z.yml
scripts/: build-og-image.mjs
src/: App.tsx  Editor.test.ts  Editor.tsx  backup.test.ts  backup.ts  dayState.test.ts  dayState.ts  itunes.test.ts  itunes.ts  main.tsx  mock-audio.ts  musicLinks.test.ts  musicLinks.ts  puzzles.proximity.test.ts  puzzles.proximity.ts  puzzles.test.ts  puzzles.ts  schedule.ts  storage.ts  styles.css  timings.test.ts  timings.ts  transfer.test.ts  transfer.ts  types.ts
src/components/: BrokenDayCard.tsx  CueTray.tsx  EndPanel.test.ts  EndPanel.tsx  Grid.tsx  LandscapeTile.tsx  MobileEndCards.tsx  NoteSheet.tsx  PlayPauseIcon.tsx  SettingsModal.tsx  SolvedBar.tsx  SolvedList.tsx  SolvedTrackRow.tsx  Tile.tsx  shareText.ts  solvedOrder.test.ts  solvedOrder.ts
src/hooks/: useAudio.ts  useKeyboardInset.test.ts  useKeyboardInset.ts  usePuzzleSession.test.ts  usePuzzleSession.ts
src/puzzles/: aschmitz-1.ts  bojanrajkovic-3.ts  (+26 more)
tests/: game.spec.ts  mobile.spec.ts  save-transfer.spec.ts
vite-plugins/: check-puzzles.ts  emit-puzzle-json.ts
wasm/: build.sh
wasm/ebur128/: Cargo.toml  PROVENANCE.md  rust-toolchain.toml
wasm/ebur128/src/: lib.rs
(+17 files in other folders)
